Added Selene project, and fixed post

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,10 @@ name: projects
 <h2>Projects</h2>
 <ul class="article-list">
   <li>
+    <h3><a href="https://github.com/linkedin/Selene">Selene</a></h3>
+    <p>iOS library which schedules the execution of tasks on a background fetch.</p>
+  </li>
+  <li>
     <h3><a href="/projects/fuse.html">Fuse.js</a></h3>
     <p>Lighweight fuzzy-search, in JavaScript.</p>
   </li>
