--- a/exp/fuse.html
+++ b/exp/fuse.html
@@ -14,6 +14,7 @@
   </style>
   <body>
     <head>
+      <meta name=viewport content="width=device-width initial-scale=1">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
       <script src="http://underscorejs.org/underscore-min.js"></script>
