--- a/exp/fuse.html
+++ b/exp/fuse.html
@@ -244,7 +244,7 @@
               <label>
                 <input type="checkbox" id="tokenizeCheckbox">Tokenize
               </label>
-              <span id="helpBlock" class="help-block">When <code>true</code>, the algorithm will search individual words <strong>and</strong> the full string, computing the final score as a function of both. Note that when <code>tokenize</code> is <code>true</code>, the <code>threshold</code>, <code>distance</code>, and <code>location</code> are inconsequential for individual tokens, and are thus ignored</span>
+              <span id="helpBlock" class="help-block">When <code>true</code>, the algorithm will search individual words <strong>and</strong> the full string, computing the final score as a function of both. In this case, the <code>threshold</code>, <code>distance</code>, and <code>location</code> are inconsequential for individual tokens, and are thus ignored</span>
             </div>
           </div>
 
