--- a/exp/fuse.html
+++ b/exp/fuse.html
@@ -217,7 +217,7 @@
               <label>
                 <input type="checkbox" id="scoreCheckbox">Include score
               </label>
-              <span id="helpBlock" class="help-block">Whether the score should be included in the result set.</span>
+              <span id="helpBlock" class="help-block">Whether the score should be included in the result set. A score of <code>0</code> indicates a perfect match, while a score of <code>1</code> indicates no match.
             </div>
           </div>
 
