changed link to fusejs.io

--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@ name: projects
     <p>iOS library which schedules the execution of tasks on a background fetch.</p>
   </li>
   <li>
-    <h3><a href="/projects/fuse.html">Fuse.js</a></h3>
+    <h3><a href="http://fusejs.io">Fuse.js</a></h3>
     <p>Lighweight fuzzy-search, in JavaScript.</p>
   </li>
   <li>
